force-app/main/default/objects/Touch_Level_Condition__c/Touch_Level_Condition__c.object-meta.xml
<CustomObject>
    <description>Child condition record under Touch_Level_Criteria__c. Defines a single field-level check evaluated dynamically by TouchLevelEvaluatorAction against the Opportunity record.</description>
    <label>Touch Level Condition</label>
    <nameField>
        <displayFormat>COND-{0000}</displayFormat>
        <label>Condition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Touch Level Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>