force-app/main/default/objects/Touch_Level_Condition__c/fields/Condition_Number__c.field-meta.xml
<CustomField>
    <fullName>Condition_Number__c</fullName>
    <description>Integer matching the number referenced in the parent&apos;s Logic_Expression__c (e.g. 1, 2, 3).</description>
    <label>Condition Number</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>