force-app/main/default/objects/Touch_Level_Condition__c/fields/Criteria__c.field-meta.xml
<CustomField>
    <fullName>Criteria__c</fullName>
    <description>Parent Touch Level Criteria record.</description>
    <label>Criteria</label>
    <referenceTo>Touch_Level_Criteria__c</referenceTo>
    <relationshipLabel>Conditions</relationshipLabel>
    <relationshipName>Conditions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>