force-app/main/default/objects/Touch_Level_Condition__c/fields/Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_API_Name__c</fullName>
    <description>Either a direct Opportunity field API name (e.g. IsPriorCustomer__c, Amount, StageName) or an Account field via relationship dot-notation (e.g. Account.Tier__c, Account.Industry) — matching SOQL relationship syntax. Evaluated via dynamic sObject.get(fieldApiName), traversing the Account relationship when present.</description>
    <label>Field API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>