force-app/main/default/objects/Touch_Level_Condition__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>Comparison value. For IN/NOT_IN, use comma-separated values (e.g. &quot;Qualification,Proposal&quot;). For IS_NULL/IS_NOT_NULL/IS_TRUE/IS_FALSE, leave blank.</description>
    <label>Value</label>
    <type>TextArea</type>
</CustomField>