force-app/main/default/objects/Touch_Level_Condition__c/listViews/All_Conditions.listView-meta.xml
<ListView>
    <fullName>All_Conditions</fullName>
    <columns>NAME</columns>
    <columns>Condition_Number__c</columns>
    <columns>Field_API_Name__c</columns>
    <columns>Operator__c</columns>
    <columns>Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Conditions</label>
</ListView>